add a main to launch benchmarks with args